apply plugin: 'com.android.application'
//apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
android {
    compileSdkVersion 32
    buildToolsVersion '30.0.2'

    defaultConfig {
        applicationId "com.ds.avare"
        minSdkVersion 20 // android 5 is minimum
        targetSdkVersion 32
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    dependencies {
    }


    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }

    lintOptions {
        abortOnError false // for Travis CI
    }

    testOptions {
        unitTests.returnDefaultValues = true

        unitTests {
                includeAndroidResources = true
        }
    }
    useLibrary 'android.test.mock'

    applicationVariants.all { variant ->
        def productFlavor = variant.productFlavors[0] != null ? "${variant.productFlavors[0].name.capitalize()}" : ""
        def buildType = "${variant.buildType.name.capitalize()}"
        tasks["compile${productFlavor}${buildType}UnitTestSources"].dependsOn(tasks["merge${productFlavor}${buildType}Assets"])
    }
}

dependencies {
    implementation 'org.xmlunit:xmlunit-core:2.3.0'
    implementation 'oro:oro:2.0.8'
    implementation 'org.xmlunit:xmlunit-matchers:2.9.0'
    implementation 'androidx.core:core:1.3.2'
    implementation 'com.google.firebase:firebase-analytics:17.2.2'
    implementation 'com.google.firebase:firebase-crashlytics:18.2.6'
    implementation 'com.github.mik3y:usb-serial-for-android:3.4.6'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-core:2.4.0'
    testImplementation 'org.powermock:powermock-module-junit4:1.7.0RC2'
    testImplementation 'org.powermock:powermock-api-mockito2:1.7.0RC2'
    testImplementation 'org.powermock:powermock-classloading-xstream:1.7.0RC2'
    testImplementation 'org.powermock:powermock-module-junit4-rule:1.7.0RC2'
    testImplementation 'org.robolectric:robolectric:4.8.2'
    testImplementation 'org.hamcrest:hamcrest:2.2'
    testImplementation 'org.codehaus.plexus:plexus-utils:3.4.2'
}
